TFP-5944 bruke riktig rettsgebyr (#2920)
* TFP-5944 bruke riktig rettsgebyr

* Riktig format kontrollfelt

* Flere tester med riktig format kontrollfelt

* Et par feilfikser

* Fikse tester som avhenger av kontrollfelt

* Bruk seneste år for nyere år